include/amino/rx/scenegraph.h

/**
 * @file scenegraph.h
 * @brief The scenegraph data structure
 */

/**
 * Type for frame indices.
 */
typedef signed long aa_rx_frame_id;
/**
 * Type for configuration indices.
 */
typedef signed long aa_rx_config_id;
/**
 *  Construct a new, empty scene graph
 */
AA_API struct aa_rx_sg *
aa_rx_sg_create();
/**
 *  Destroy a scene graph
 */
AA_API void aa_rx_sg_destroy(struct aa_rx_sg *scene_graph);
/**
 * Setup the scenegraph internal indices.
 *
 * This function must be called before any frame_ids or config_ids can
 * be used with the scenegraph.
 */
AA_API int aa_rx_sg_init ( struct aa_rx_sg *scene_graph );
/**
 * Return the number of frames in scene_graph.
 */
AA_API size_t
aa_rx_sg_frame_count (
    const struct aa_rx_sg *scene_graph );
/**
 * Return the number of configuration variables in scene_graph.
 */
AA_API size_t
aa_rx_sg_config_count (
    const struct aa_rx_sg *scene_graph );
/**
 *  Return the index of a configuration variable in the scene graph
 *
 * @pre aa_rx_sg_init() has been called after all frames were added to
 * the scenegraph.
 */
AA_API aa_rx_config_id aa_rx_sg_config_id(
    const struct aa_rx_sg *scene_graph, const char *config_name);
/**
 *  Return the index of a frame in the scene graph
 *
 * @pre aa_rx_sg_init() has been called after all frames were added to
 * the scenegraph.
 */
AA_API aa_rx_frame_id aa_rx_sg_frame_id (
    const struct aa_rx_sg *scene_graph, const char *frame_name);
/* /\** */
/*  *  Return the index of a configuration variable for the given frame. */
/*  *\/ */
/* AA_API aa_rx_config_id aa_rx_sg_frame_config_id( */
/*     struct aa_rx_sg *scene_graph, aa_rx_frame_id frame_id); */

/**
 *  Add a fixed-transform frame to the scene graph
 *
 * Note that adding a new frame may changes the frame_ids of all
 * previously added frames.
 *
 * @param scene_graph The scene graph container
 * @param parent      The name of the parent frame
 * @param name        The name of the frame to be added
 * @param q           The unit quaternion frame rotation (xyzw)
 * @param v           The frame translation vector
 *
 * @pre aa_rx_sg_init() has been called after all frames were added to
 * the scenegraph.
 */
AA_API void aa_rx_sg_add_frame_fixed
( struct aa_rx_sg *scene_graph,
  const char *parent, const char *name,
  const double q[4], const double v[3] );
AA_API void
aa_rx_sg_fill_tf_abs( const struct aa_rx_sg *scene_graph,
                      const struct aa_dvec *q,
                      struct aa_dmat *tf_abs );